setup tailwind and ts

--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="viewport" content="width=device-width" />
-    %sveltekit.head%
-  </head>
-  <body>
-    <div>%sveltekit.body%</div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Dawichi Links</title>
+        <meta name="description" content="URL shortener for important links" />
+        %sveltekit.head%
+    </head>
+    <body>
+        <div>%sveltekit.body%</div>
+    </body>
 </html>
