--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width" />
         <title>Dawichi Links</title>
         <meta name="description" content="URL shortener for important links" />
+        <!-- Bootstrap Icons -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" />
         %sveltekit.head%
     </head>
     <body>
